2008-07-02  Esteban Sanchez  <estebans@artica.es>

	* operation/agentes/estado_grupo.php: Fixed missing variable on lag
	calculation.

2008-07-02  Esteban Sanchez  <estebans@artica.es>

	* include/functions_html.php: Fixed a typo in print_table() that was
	causing to show nothing on IE.

	* include/styles/pandora.css: Rollback to #909 since it was not
	working properly in IE. Need more discusion.

	* include/styles/pandora_width.css: Added to repository. Testing style
	to have porcentual widths.

	* operation/agentes/estado_grupo.php: Rewritten to make the code
	cleaner and a bit smarter. Future work will be required to make the
	tooltips or the table better.

	* reporting/stat_win.php: Replaced include with require_once to
	speed up the code parsing, besides it was not working with the
	includes.

2008-07-02  Esteban Sanchez  <estebans@artica.es>

	* godmode/reporting/reporting_builder.php: Removed extra "#" in
	javascript.

	* godmode/reporting/map_builder.php: Changes to try working in
	Internet Explorer (not completed yet, it's really hard).

	* include/functions_db.php: Changed sever_status() It won't longer
	return all the modules in pandora, since it's not need in this
	function, also replaced a strange SQL which was using MAX() with a more
	logical DISTINCT(). Style correction.

	* include/styles/pandora.css: Removed #main width, so it's as wider as
	the parent. Fixed menu_tab_fram and menu_tab_frame_view divs to the
	new template, aligned to the right. Tab and blankspaces correction.

2008-07-01  Sancho Lerena <slerena@gmail.com>

	* pandoradb.sql: Added several indexes, patch from Guruevi.

	* configurar_agente.php: Default "public" for snmp_community
	was causing a fail on blank communities (snmp community is used
	on WMI modules as filter key). Default value is now "" due the way
	get_parameter works, and don't want to change a global function.

	* module_manager_editor_wmi.php: Added two new fields: filter key